[package]
name = "newick-rs"
version = "0.2.0"
authors = ["kaorun343 <5625395+kaorun343@users.noreply.github.com>"]
edition = "2018"
description = "A library for newick format"
readme = "README.md"
repository = "https://github.com/kaorun343/newick-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
serde = { version = "1.0", features = ["derive"] }
